--- a/src/main/resources/templates/Form_Khoa.html
+++ b/src/main/resources/templates/Form_Khoa.html
@@ -9,37 +9,38 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
-    <div class="background">
-        <div class="search">
-            <input type="text" placeholder="Tìm Kiếm" />
-            <button><i class="fas fa-search"></i>Tìm</button>
-        </div>
-        <div class="return">
-            <a href=""><i class="fas fa-undo-alt"></i>Quay về</a>
-        </div>
-        <h3>Thông Tin Các Khoa</h3>
-      <table>
+<div class="background">
+    <div class="search">
+        <input type="text" placeholder="Tìm Kiếm" />
+        <button><i class="fas fa-search"></i>Tìm</button>
+    </div>
+    <div class="return">
+        <button>Thêm Khoa</button>
+        <a href=""><i class="fas fa-undo-alt"></i>Quay về</a>
+    </div>
+    <h3>Thông Tin Các Khoa</h3>
+    <table>
         <thead>
-          <th>Số thứ tự</th>
-          <th>Mã khoa</th>
-          <th>Tên Khoa</th>
-          <th>Action</th>
+        <th>Số thứ tự</th>
+        <th>Mã khoa</th>
+        <th>Tên Khoa</th>
+        <th>Action</th>
         </thead>
         <tbody>
-          <tr>
+        <tr>
             <td>1</td>
             <td>RHM</td>
             <td>Khoa Răng Hàm Mặt</td>
             <td>
-              <button class="update">Sửa</button>
-              <button class="delete">Xóa</button>
+                <button class="update">Sửa</button>
+                <button class="delete">Xóa</button>
             </td>
-          </tr>
+        </tr>
         </tbody>
-      </table>
-    </div>
-    
-    
-    <div class="blur"></div>
+    </table>
+</div>
+
+
+<div class="blur"></div>
 </body>
 </html>
