--- a/src/main/resources/templates/Form_BacSi.html
+++ b/src/main/resources/templates/Form_BacSi.html
@@ -49,7 +49,7 @@
       
 
         <div class="khoa">
-            <a th:href="@{/save}"><i class="fas fa-arrow-right"></i>Quay lại</a>
+            <a th:href="@{/alldoctor}"><i class="fas fa-arrow-right"></i>Quay lại</a>
         </div>
     </div>
     <div class="blur"></div>
