--- a/src/main/resources/templates/Home_BacSi.html
+++ b/src/main/resources/templates/Home_BacSi.html
@@ -19,7 +19,7 @@
 
   <div class="khoa_add">
     <button><a th:href="@{/showFormForAdd}">Thêm Bác Sĩ</a> </button>
-    <a th:href="@{/GiaoDien_Khoa}"><i class="fas fa-arrow-right"></i>Quản Lí Khoa</a>
+    <a th:href="@{/allkhoa}"><i class="fas fa-arrow-right"></i>Quản Lí Khoa</a>
   </div>
 
   <h3>Thông Tin Bác Sĩ</h3>
@@ -30,7 +30,7 @@
     <th>Tuổi</th>
     <th>Email</th>
     <th>Số điện thoại</th>
-    <th>Mã Khoa</th>
+    <th>Tên Khoa</th>
     <th>Action</th>
     </thead>
     <tbody>
@@ -47,8 +47,8 @@
         </button>
         <button class="delete">
           <a th:href="@{/delete(doctorId=${temp.doctor.id})}"
-             onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false"
-          >Xóa</a>
+             onclick="if (!(confirm('Bạn có chắc chắn xóa Bác Sĩ này không?'))) return false">
+            Xóa</a>
         </button>
       </td>
     </tr>
